<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:background="@color/orange">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:text="@string/dodo_pizza"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="155dp"
            tools:layout_editor_absoluteY="18dp" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/discountButton"
        android:layout_width="360dp"
        android:layout_height="100dp"
        app:cardCornerRadius="15dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dessertsButton">

        <TextView
            android:background="@color/orange"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/discount"
            android:textSize="50sp"
            android:textColor="@color/white"
            android:textStyle="bold|italic"
            android:fontFamily="serif"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@id/pizzaButton"
        android:layout_width="230dp"
        android:layout_height="220dp"
        android:layout_margin="25dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/img_for_pizzabutton" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="bottom"
            android:background="@color/white"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/pizza_text"
            android:textColor="@color/blue"
            android:textStyle="bold|italic" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@id/drinkButton"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="25dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pizzaButton"
        app:layout_constraintTop_toTopOf="@+id/pizzaButton">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/img_for_drinks"
            android:background="@color/orange"
            />

        <TextView
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/drinks_text"
            android:textColor="@color/blue"
            android:textStyle="bold|italic"
            android:gravity="center"
            android:background="@color/white"
            android:fontFamily="serif"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/snacksButton"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="@+id/drinkButton"
        app:layout_constraintStart_toStartOf="@+id/pizzaButton"
        app:layout_constraintTop_toBottomOf="@+id/pizzaButton"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:background="@color/orange"
            android:gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/dodster"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="25dp"/>

        <TextView
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/snacks_text"
            android:textColor="@color/blue"
            android:textStyle="bold|italic"
            android:gravity="center"
            android:background="@color/white"
            android:fontFamily="serif"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/dessertsButton"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintStart_toStartOf="@+id/snacksButton"
        app:layout_constraintTop_toBottomOf="@+id/snacksButton">

        <TextView
            android:layout_gravity="bottom"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:text="@string/dessert_text"
            android:textColor="@color/blue"
            android:textStyle="bold|italic"
            android:gravity="center"
            android:background="@color/white"
            android:fontFamily="serif"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:background="@color/orange"
            android:scaleType="fitCenter"
            android:src="@drawable/img_for_deserts" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/sauceButton"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="15dp"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/snacksButton"
        app:layout_constraintStart_toEndOf="@+id/dessertsButton"
        app:layout_constraintTop_toBottomOf="@+id/snacksButton">

        <TextView
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/sauce_text"
            android:textColor="@color/blue"
            android:textStyle="bold|italic"
            android:gravity="center"
            android:background="@color/white"
            android:fontFamily="serif"/>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/orange"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/img_for_sause" />

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>